# zksync-allocation-checker

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
